[gd_scene load_steps=2 format=3 uid="uid://dr06pyksdqo64"]

[ext_resource type="Script" uid="uid://cnis41sq5suh1" path="res://scripts/main.gd" id="1_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 200

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LoadGIFButton" type="Button" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load GIF..."

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Parse Time: "

[node name="TimeToLoadLabel" type="Label" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.0s"

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Frame count: "

[node name="FrameCountLabel" type="Label" parent="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="HSplitContainer/PanelContainer2/CenterContainer"]
layout_mode = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="HSplitContainer/PanelContainer2/CenterContainer/Control"]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "File Path:"

[node name="FilePathLabel" type="Label" parent="HSplitContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadingPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="LoadingPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LoadingPanelContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Loading..."

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1

[connection signal="pressed" from="HSplitContainer/PanelContainer/MarginContainer/VBoxContainer/LoadGIFButton" to="." method="_on_load_gif_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
